[tool.poetry]
name = "pyaranet4"
version = "1.0.1"
description = "A cross-platform Python interface for the Aranet4 CO₂ meter"
authors = [
    "Daniel Cormier <git@drc97.com>",
    "Stijn Peeters <a4@stijnpeeters.nl>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/drcormier/pyaranet4"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.28.1"
bleak = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
