[build-system]
requires = [
    "setuptools >= 64",
    "wheel >= 0.37.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyaranet4"
description = "A cross-platform Python interface for the Aranet4 CO₂ meter"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
dependencies = [
    "bleak == 0.19.0",
    "requests == 2.28.1"
]
dynamic = ["version"]


[project.scripts]
pyaranet4 = "pyaranet4.__main__:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
